name:                my3ml
version:             0.1.0.0
synopsis:            Haskell backend for 3ML
description:         Please see README.md
homepage:            https://github.com/ThreeMinuteLearning/my3ml
license:             BSD3
license-file:        LICENSE
author:              Luke Taylor
maintainer:          tekul.hs@gmail.com
category:            Web
build-type:          Simple
cabal-version:       >=1.10

source-repository head
  type:     git
  location: https://github.com/ThreeMinuteLearning/my3ml.git

library
  hs-source-dirs:      api
  ghc-options:         -Wall
  exposed-modules:     Api.Server
                     , Api.Types
                     , Api.Auth
                     , HasqlDB
                     , Rollbar
                     , DB
  other-modules:       Password
  build-depends:       aeson >= 0.8.0.2
                     , base >= 4.7 && < 5
                     , bytestring
                     , containers >= 0.5.6.2
                     , contravariant >= 1.4
                     , contravariant-extras >= 0.3
                     , cryptonite
                     , errors
                     , hasql >= 0.19
                     , hasql-pool
                     , http-api-data >= 0.3.7.1
                     , http-conduit
                     , jose-jwt
                     , monad-logger
                     , memory > 0.14
                     , mtl
                     , safe-exceptions >= 0.1.4
                     , servant-server >= 0.11
                     , stm >= 2.4.4
                     , text
                     , time
                     , transformers >= 0.4.2.0
                     , uuid
                     , wai
                     , vector
  default-language:    Haskell2010

executable backend
  hs-source-dirs:      backend
  main-is:             Main.hs
  other-modules:       Version
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , aeson
                     , array
                     , bytestring
                     , containers >= 0.5.6.2
                     , cryptonite
                     , directory
                     , exceptions
                     , hasql
                     , hasql-pool
                     , jose-jwt
                     , monad-logger
                     , mtl
                     , my3ml
                     , random
                     , servant-server >= 0.9
                     , stm >= 2.4.4
                     , text
                     , uuid
                     , wai >= 3.2
                     , wai-extra
                     , warp >= 3.2
  default-language:    Haskell2010

executable code-generator
  hs-source-dirs:      code-generator
  main-is:             Main.hs
  ghc-options:         -Wall
  build-depends:       base
                     , elm-export
                     , my3ml
                     , servant-elm >= 0.4
                     , servant-server >= 0.11
                     , servant-foreign >= 0.10
                     , text
  default-language:    Haskell2010

test-suite test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , my3ml
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
